--- a/_pages/about.html
+++ b/_pages/about.html
@@ -84,17 +84,7 @@ one_column_section: >-
 		    {% if page.contact_section.sub_title %}
 			 <h5 class="formSection__Heading">{{ page.contact_section.sub_title }}</h5>
 			{% endif %}
-			<form method="post" netlify-honeypot="bot-field" data-netlify="true" action="{{general_data.contact_form_action_url}}" name="contact" class="cfForm">
-				<input type="hidden" name="bot-field" />+ <input type="hidden" name="form-name" value="contact" />
-				<div class="formFlex">
-					<div class="formSmallInputs inputWrapper">
-						<input type="text" class="" name="NAME" placeholder="NAME" /><input type="text" class="" name="EMAIL" placeholder="EMAIL" />
-						<input type="text" class="" name="PHONE NUMBER" placeholder="PHONE NUMBER" />
-					</div>
-					<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
-				</div>
-				<input type="submit" class="formSubmit" value="submit" />
-			</form>
+			{% include form.html %}
 		</section>
 	</div>
 	<div class="aboutSection__Images">
