--- a/success.html
+++ b/success.html
@@ -4,8 +4,7 @@ layout: page
 ---
 <div class="container">
 <div class="not-found-content text-center justify-content-center" style="padding: 30vh 0;">
-  <h1 class="display-1">404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h1 class="display-1">Form Submit Success</h1>
+  <p>Thank you for your submission, someone will be in contact soon.</p>
 </div>
 </div>
