--- a/success.html
+++ b/success.html
@@ -2,9 +2,11 @@
 permalink: /success
 layout: page
 ---
+<section class="container-fluid px-0 bg-primary">
 <div class="container">
 <div class="not-found-content text-center justify-content-center" style="padding: 30vh 0;">
-  <h1 class="display-1">Form Submit Success</h1>
-  <p>Thank you for your submission, someone will be in contact soon.</p>
+  <h1 class="display-1 text-white">Form Submit Success</h1>
+ <p class="text-center text-white mt-5 lead">Thank you for your submission, someone will be in contact soon.</p>
 </div>
 </div>
+</section>
