Updated 1 file via CloudCannon.

--- a/_pages/personal-injury.html
+++ b/_pages/personal-injury.html
@@ -1,48 +1,45 @@
 ---
 layout: page
-title: "Personal Injury"
-keywords: >-
-  personal-injury,criminal-law
-permalink: "/personal-injury"
+title: Personal Injury
+keywords: personal-injury,criminal-law
+permalink: /personal-injury
 banner_section:
-  title: "PERSONAL INJURY"
+  title: PERSONAL INJURY
   lists:
     - HURT ON THE ROAD, AT
     - WORK, OR BY A DOCTOR?
     - LET ME HANDLE YOUR
     - CLAIM.
-  banner_image_url: "/assets/images/banner_7.jpg"
-
+  banner_image_url: /assets/images/banner_7.jpg
 contact_section:
-  title: "CONTACT US now for a consultation"
-  sub_title: "REQUEST A CONSULTATION"
-  banner_image_url: "/assets/images/banner_8.jpg"
-
-white_section: 
-  title: >- 
-    INJURED? OUT OF WORK? MOUNTING MEDICAL EXPENSES?
+  title: CONTACT US now for a consultation
+  sub_title: REQUEST A CONSULTATION
+  banner_image_url: /assets/images/banner_8.jpg
+white_section:
+  title: INJURED? OUT OF WORK? MOUNTING MEDICAL EXPENSES?
   description: >-
-    Our firm has vast experience in handling personal injury cases and will fight to ensure that you receive a fair and equitable result, be it at trial or through settlement negotiations.  <br/><br/> WWe have tried many cases, both before juries and judges, and have had favorable results for both. Our representation is aggressive and always geared towards finding the best result for our client. We represent clients all over the state from all walks of life.
-
+    Our firm has vast experience in handling personal injury cases and will
+    fight to ensure that you receive a fair and equitable result, be it at trial
+    or through settlement negotiations.  <br/><br/> We have tried many cases,
+    both before juries and judges, and have had favorable results for both. Our
+    representation is aggressive and always geared towards finding the best
+    result for our client. We represent clients all over the state from all
+    walks of life.
 gallery:
-  - image_url: "/assets/images/gallery_04.jpg"
-  - image_url: "/assets/images/gallery_05.jpg"
-  - image_url: "/assets/images/gallery_06.jpg"
-
+  - image_url: /assets/images/gallery_04.jpg
+  - image_url: /assets/images/gallery_05.jpg
+  - image_url: /assets/images/gallery_06.jpg
 services_section:
-
-
-  button_text: "Contact"
-  button_url: "/contact"
+  button_text: Contact
+  button_url: /contact
   services:
-    - list: "ACCIDENTS (CAR, 18 WHEELER, MOTORCYCLE, BOAT)"
-    - list: "WRONGFUL DEATH"
-    - list: "SLIP AND FALL"
-    - list: "WORKPLACE INJURY"
-    - list: "MEDICAL MALPRACTICE"
-    - list: "GENERAL NEGLIGENCE"
+    - list: ACCIDENTS (CAR, 18 WHEELER, MOTORCYCLE, BOAT)
+    - list: WRONGFUL DEATH
+    - list: SLIP AND FALL
+    - list: WORKPLACE INJURY
+    - list: MEDICAL MALPRACTICE
+    - list: GENERAL NEGLIGENCE
 ---
-
 <section class="hero pageHero pageHero--Collage">
     <div class="pageHero__Text">
 		{% if page.banner_section.title %}
