Completely rebuilt info nav, redesigned submit and link buttons for forms, footer positioning

--- a/index.html
+++ b/index.html
@@ -87,25 +87,71 @@ about_section:
     </div>
 </section>
 
-<section class="d-flex">
-    <div>
-        <nav class="navbar display-3">
-            <ul class="navbar-nav flex-column justify-content-center" id="serviceTab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="personal-injury-tab" data-bs-toggle="tab" data-bs-target="#personal-injury-content" role="tab" aria-controls="personal-injury-content" aria-selected="true"> THIS IS A TAB</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="criminal-law-tab" data-bs-toggle="tab" data-bs-target="#criminal-law-content" role="tab" aria-controls="criminal-law-content" aria-selected="false"> THIS IS ANOTHER TAB</a>
-                </li>
-            </ul>
-        </nav>
-         <div class="tab-content" id="serviceTabContent">
-                <div class="tab-pane fade active fs-1" id="personal-injury-content" role="tabpanel" aria-labelledby="personal-injury-tab">
-                    Text for first tab...
-                </div>
-                <div class="tab-pane fade" id="criminal-law-content" role="tabpanel" aria-labelledby="criminal-law-tab">
-                    Text for second tab...
-                </div>
+<!--DESKTOP INFO NAV HERE-->
+
+<section class="container-fluid d-none d-lg-grid py-5">
+    <div class="row">
+        <div class="col-6 d-grid">
+            <nav class="navbar display-6 px-5 justify-content-center">
+                <ul class="navbar-nav flex-column justify-content-center" id="serviceTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link index-info-color" id="personal-injury-tab" data-bs-toggle="tab" data-bs-target="#personal-injury-content" role="tab" aria-controls="personal-injury-content" aria-selected="true">personal injury</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link index-info-color" id="criminal-law-tab" data-bs-toggle="tab" data-bs-target="#criminal-law-content" role="tab" aria-controls="criminal-law-content" aria-selected="false">criminal law</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link index-info-color" id="family-law-tab" data-bs-toggle="tab" data-bs-target="#family-law-content" role="tab" aria-controls="family-law-content" aria-selected="false">family law</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link index-info-color" id="dwi-owi-tab" data-bs-toggle="tab" data-bs-target="#dwi-owi-content" role="tab" aria-controls="dwi-owi-content" aria-selected="false">dwi/owi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link index-info-color" id="estate-tab" data-bs-toggle="tab" data-bs-target="#estate-content" role="tab" aria-controls="estate-content" aria-selected="false">estate planning</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link index-info-color" id="additional-services-tab" data-bs-toggle="tab" data-bs-target="#additional-services-content" role="tab" aria-controls="additional-services-content" aria-selected="false">additional services</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="tab-content col-4" id="serviceTabContent">
+            <div class="tab-pane fade fs-3" id="personal-injury-content" role="tabpanel" aria-labelledby="personal-injury-tab">
+                <p>
+                If you were injured through no fault of your own and need help navigating through the legal system contact us immediately. When dealing with these difficult, fragile matters, you will need an attorney with not only experience, but with compassion. Someone who will take a personal interest in your case and have your best interest in mind.
+                </p>
+                <a href="/personal-injury" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
+            </div>
+            <div class="tab-pane fade fs-3" id="criminal-law-content" role="tabpanel" aria-labelledby="criminal-law-tab">
+                <p>
+                Our firm offers criminal defense services to those charged with having committed a crime. We take representation of a client very seriously as we understand the emotional toll placed on a person and their family when someone has been accused and/or charged with committing a crime. Our firm works tirelessly from the moment we are contacted by a client or their family, be it the day they are arrested or the week before trial.
+                </p>
+                <a href="/criminal-law" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
+            </div>
+             <div class="tab-pane fade fs-3" id="family-law-content" role="tabpanel" aria-labelledby="family-law-tab">
+                 <p>
+                 We realize that extended litigation should be a last alternative in resolving a domestic or family dispute. We work to achieve our clients goals with the least emotional and financial expense.
+                 </p>
+                 <a href="/family-law" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
+            </div>
+            <div class="tab-pane fade fs-3" id="dwi-owi-content" role="tabpanel" aria-labelledby="dwi-owi-tab">
+                <p>
+                If you have been arrested for driving under the influence of alcohol or drugs, it is imperative that you contact my office immediately. DUI cases can develop relatively quick, and the more time that I have to gather the facts, the better the case I can build to defend you.
+                </p>
+                <a href="/dwi-owi" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
+            </div>
+            <div class="tab-pane fade fs-3" id="estate-content" role="tabpanel" aria-labelledby="estate-tab">
+                <p>
+                Call today to set up an appointment so that I can help you plan for your future so that your wishes can be carried out.
+                </p>
+                <a href="/estate-planning" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
+            </div>
+            <div class="tab-pane fade fs-3" id="additional-services-content" role="tabpanel" aria-labelledby="additional-services-tab">
+                <p>
+                We pride ourselves on being a full service law firm and strive to fulfill our clients needs. Should you have a problem and/or dispute not specifically delineated above, please feel free to contact my office for a consultation.
+                </p>
+                <a href="/additional-services" class="btn btn-primary btn-lg rounded-0 learn-more-btn" role="button" >LEARN MORE </a>
+            </div>
         </div>
     </div>
 </section>
@@ -176,7 +222,12 @@ about_section:
 <!--        </div>-->
 <!--    </section>-->
 <!--</section>-->
-<div class="container">
+
+
+
+<!-- DESKTOP MCCORMICK AREA HERE-->
+
+<div class="container d-none d-lg-block">
     <div class="row">
         <div class="d-block col-6">
             {% if about.background_image %}
@@ -197,7 +248,9 @@ about_section:
         </div>
     </div>
 </div>
-<section class="formSection">
-    <h5 class="formSection__Heading editable">REQUEST A CONSULTATION</h5>
-    {% include form.html %}
+<section class="d-flex d-lg-none justify-content-center">
+    <div class="col-12 col-sm-10 px-5 py-5">
+        <h5 class="formSection__Heading editable col-12">REQUEST A CONSULTATION</h5>
+        {% include form.html %}
+    </div>
 </section>
